# djc-documents

./: README.md  setup.cfg
django_documents.egg-info/: PKG-INFO  SOURCES.txt
documents/: admin.py  models.py
documents/migrations/: 0001_initial.py  0002_auto_20190925_2348.py
